--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   },
   "devDependencies": {
     "glob": "^8.1.0",
-    "vite": "^4.5.2",
-    "vite-plugin-static-copy": "^1.0.6"
+    "vite": "^4.5.2"
   },
   "author": "Alexander Repeta <condordaryna@gmail.com>",
   "license": "ISC",
